syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

import "google/protobuf/timestamp.proto";

message GetWorkflowsRequest {
	optional string namespace = 1;
	optional int32 offset = 2;
	optional int32 limit = 3;
}

message GetWorkflowsResponse {
	message Workflow {
		optional string uid = 1;
		optional string id = 2;
		optional int32 revision = 3;
		optional bool active = 4;
		optional google.protobuf.Timestamp createdAt = 5;
		optional string description = 6;
		optional string logToEvents = 7;
	}
	repeated Workflow workflows = 1;
	optional int32 offset = 2;
	optional int32 limit = 3;
	optional int32 total = 4;
}