syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

message DeleteRegistryRequest {
	optional string namespace = 1;
	optional string name = 2;
}
